# ipgyeol-2026

./: .gitignore  LICENSE  NOTICE.md  README.md
.github/workflows/: build.yml  deploy.yml
data/: meta.yaml
data/raw/경상/: 경국대ㅣ2026학년도 수시모집 입시 결과.xlsx  금오공대ㅣ2026 수시 및 정시 입시결과.xlsx  대구한의대ㅣ26학년도 수시모집 입시결과(공지용).xlsx  대구한의대ㅣ26학년도 정시모집 입시결과(공지용).xlsx  부경대ㅣ2026 수시 입시결과.xlsx  영남대ㅣ2026학년도 수시모집 입학자 성적.xlsx  영남대ㅣ2026학년도 정시모집 입학자 성적.xlsx  울산대ㅣ2026 정시 입결.html  울산대ㅣ2026학년도 수시모집 입시 결과(예체능).xlsx  울산대ㅣ2026학년도 수시모집 입시 결과(학생부교과형).xlsx  울산대ㅣ2026학년도 수시모집 입시 결과(학생부종합형).xlsx  인제대ㅣ2026학년도 수시모집 전형별, 모집단위별 입시결과.xlsx  인제대ㅣ2026학년도 정시모집 전형별, 모집단위별 입시결과.xlsx  한국해양대ㅣ2026 수시 입시결과.xlsx
data/raw/교대/: 경인교대ㅣ2026학년도 신입학 전형 입시결과.hwp  서울교대ㅣ2026 수시입결.xlsx  전주교대ㅣ2026학년도 신입생 수시모집 입학전형 결과.hwp  전주교대ㅣ2026학년도 신입생 정시모집 입학전형 결과.hwp  청주교육대ㅣ2026학년도+수시모집+성적자료(최종).hwp  청주교육대ㅣ2026학년도+정시모집+성적자료(최종).hwp
data/raw/서울/: 삼육대ㅣ2026 수시 입결.xlsx
data/raw/전라 제주/: 광주대ㅣ2026 수시 입결.xlsx  광주대ㅣ2026 정시 입결.xlsx  국립목포대ㅣ2026학년도 입학전형 결과 분석자료(수시)_홈페이지.xlsx  전주대ㅣ2026 입시결과.xlsx  조선대ㅣ2026학년도 신입학 입시결과(홈페이지 게시용).xlsx
data/raw/지방거점대/: 경북대ㅣ2026학년도 대학 수시 및 정시모집 지원결과_게시용.xlsx  전남대ㅣ2026학년도 대학 입학전형 결과분석 자료(수시_공개).xlsx  (+4 more)
extractor/: Cargo.toml
extractor/src/: main.rs  model.rs  normalize.rs  pdf.rs  scan.rs  source_meta.rs  validate.rs  xlsx.rs
scripts/: hwp_to_pdf.sh  init_data.sh  ocr_jpg.sh  preprocess_pdf.py  simulate_extract.py
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: data.example.json  data.json
site/src/: cards.js  filters.js  main.js  search.js  styles.css  viewer.js
(+19 files in other folders)
